stderr
Card.java:7: error: invalid method declaration; return type required
      private Fruit(String madein) { // コンストラクタの定義
              ^
1 error
